<resources>
    <string name="app_name">羅馬競技生死鬥</string>
    <string name="no_video_record_permission">再不開錄影相關權限真的會被罵</string>
    <string name="open_video_record_permission">惡魔貓男叫你開權限</string>
    <string name="record">錄影</string>
    <string name="open_video_record_page">開啟錄影頁面</string>
    <string name="open_video_play_page">開啟影片清單</string>
    <string name="history_record">歷史記錄</string>
    <string name="duel_score">決鬥記分</string>
    <string name="blue_player">藍方選手</string>
    <string name="red_player">紅方選手</string>
    <string name="hit_hand_add_score">%1$s擊中慣用手及防禦手上臂部加1分</string>
    <string name="hit_facade_add_score">%1$s擊中正面加2分</string>
    <string name="hit_rear_add_score">%1$s擊中背面加3分</string>
</resources>
